--- a/src/components/pages/Home/Header/header.css
+++ b/src/components/pages/Home/Header/header.css
@@ -2,7 +2,8 @@
 /* Estilo básico para o header */
 .header {
     position: relative;
-    height: 140vh;
+    height: 100%;
+    padding-bottom: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -63,7 +64,7 @@
     align-items: center;
     gap: 20px;
     flex-wrap: wrap;
-    position: relative;
+    position: relative; 
 }
 
 /* Informações do lado direito */
@@ -138,8 +139,10 @@
 /* Retângulos com características */
 .feature-boxes {
     display: flex;
+    position: relative;
     gap: 20px;
-    margin-top: 80px;
+    top: 80px;
+    padding-bottom: 5px;
 }
 
 .feature-box {
@@ -150,7 +153,7 @@
     text-align: center;
     position: relative;
     overflow: hidden;
-    height: 250px; 
+    height: 250px;
 }
 
 /* Estilo das imagens dentro dos retângulos */
